--- a/package.json
+++ b/package.json
@@ -217,6 +217,16 @@
 					"notesbox.location": {
 						"markdownDescription": "Set the path of your notes or snippets folder location. Ex: ``~/Notes/``",
 						"type": "string"
+					},
+					"notesbox.exclude": {
+						"markdownDescription": "Set additional files and folders to exclude from listing in notes explorer. Inherits from `#files.exclude#`.",
+						"type": "array",
+						"items": {
+							"type": "string"
+						},
+						"default": [
+							".DS_Store"
+						]
 					}
 				}
 			}
